@@ -16,6 +16,8 @@
 maint jit dump
   Dump an in-memory JIT object into a file.
 
+* Add convenience variable `$_simd_lane`.
+
 * Python API
 
   ** Added gdb.record.clear(). Clears the trace data of the current recording.
